Organized code, put searchbar in nav, created brain containers

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--Jquery Bootstrap / -->
-    <link rel="stylesheet" href="node_modules/jquery/dist/css/bootstrap-theme.css">
-    <!--Font Awesome / -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!--Bootstrap CSS / -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
     <!--Local jquery / -->
@@ -17,7 +13,8 @@
 </head>
 
 <body>
-    <div id="root" className="row"></div>
+    <div id="root"></div>
+    <div id="results"></div>
 </body>
 
 </html>
